--- a/.config/hypr/conf/binds.conf
+++ b/.config/hypr/conf/binds.conf
@@ -72,4 +72,32 @@ bind = $mainMod, mouse_up, workspace, e-1 # Scroll workspaces
 bindm = $mainMod, mouse:272, movewindow # Move window
 bindm = $mainMod, mouse:273, resizewindow # Resize window
 
-bind = Shift, Print, exec, /usr/bin/grimblast copy area #  Move window to workspace 1
+bind = Shift, Print,exec, /usr/bin/grimblast copy area #  Move window to workspace 1
+
+
+#bind = $mainmod SHIFT, left, movewindow, mon:HDMI-A-1
+#bind = $mainmod SHIFT, right, movewindow, mon:DP-2
+
+# Added submap Resize
+# will switch to a submap called resize
+bind = ALT, R, submap, resize
+
+# will start a submap called "resize"
+submap = resize
+
+# sets repeatable binds for resizing the active window
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+
+# use reset to go back to the global submap
+bind = , escape, submap, reset 
+
+# will reset the submap, which will return to the global submap
+submap = reset
+# End Submap Resize
+
+
+bind = $mainMod, W, moveworkspacetomonitor, 1 HDMI-A-1
+bind = $mainMod, S, moveworkspacetomonitor, 1 DP-2
