--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -5,6 +5,8 @@ exec-once = dunst
 exec-once = syncthing
 exec-once = alacritty
 exec-once = logseq
+exec-once = logseq
+exec-once = udiskie
 
 exec-once = hyprswitch init &
 
